Fix chat status behind button issue

--- a/Team4of5/src/Team4of5_App/Chat/MenuFuncs.css
+++ b/Team4of5/src/Team4of5_App/Chat/MenuFuncs.css
@@ -8,6 +8,9 @@
     margin-bottom: 30px;
 }
 
+.statusDropdown{
+  z-index: 2;
+}
 
 .selected-state{
     width: 15px
